# moonscribe

moonscribe/: MANIFEST.in  README.md  setup.cfg
moonscribe/src/moonscribe/: __main__.py  version.py
