[metadata]
name = moonscribe
version = attr: moonscribe.version.__version__
url = https://github.com/sunarch/moonscribe
project_urls =
    Bug Tracker = https://github.com/sunarch/moonscribe/issues
author = András Németh (sunarch)
author_email = sunarch@protonmail.com
maintainer = András Németh (sunarch)
maintainer_email = sunarch@protonmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Development Status :: 1 - Planning
    Intended Audience :: End Users/Desktop
    Topic :: Games/Entertainment :: Role-Playing
    Typing :: Typed
license = Mozilla Public License 2.0 (MPL 2.0)
description = moonscribe - an RPG engine
long_description = file: README.md
long_description_content_type = text/markdown
keywords = moonscribe,rpg
platforms = Any

[options]
python_requires = >=3.9
packages = find:
package_dir =
    = src
scripts =
    bin/moonscribe

[options.entry_points]
console_scripts =
    moonscribe = moonscribe.__main__:main

[options.packages.find]
where = src

[options.package_data]
    moonscribe = data/logger.ini
